feat: CatToy 필드 업데이트 로직 추가 및 서비스 로직 구현